# wdl-android

./: .gitmodules  LICENSE  README.md  build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
buildSrc/: build.gradle.kts
buildSrc/src/main/groovy/: sample.conventions.gradle
buildSrc/src/main/kotlin/: sample.conventions.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
resampling/: build.gradle
resampling/src/main/: AndroidManifest.xml
resampling/src/main/res/layout/: activity_main.xml
resampling/src/main/res/values/: arrays.xml
samples/app/: build.gradle  build.gradle.kts
samples/app/src/main/: AndroidManifest.xml
samples/app/src/main/res/values/: themes.xml
samples/resampling/: build.gradle  build.gradle.kts
samples/resampling/src/main/: AndroidManifest.xml
samples/resampling/src/main/res/layout/: input.xml
samples/resampling/src/main/res/values/: strings.xml
samples/simplepitchshifter/: build.gradle  build.gradle.kts
samples/simplepitchshifter/src/main/: AndroidManifest.xml
simplepitchshifter/: build.gradle
simplepitchshifter/src/main/: AndroidManifest.xml
simplepitchshifter/src/main/res/layout/: activity_main.xml  control_fragment.xml
wdl/: build.gradle  build.gradle.kts
wdl/src/main/: AndroidManifest.xml
wdl/src/main/cpp/: CMakeLists.txt
wdl/src/main/cpp/jni/: fft.cpp  resample.cpp  simple_pitchshift.cpp  sinewavegen.cpp
(+26 files in other folders)
